# spotify-sdk

./: pyproject.toml
docs/reference/services/: playlists.md
src/spotify_sdk/_async/services/: playlists.py
src/spotify_sdk/_sync/services/: playlists.py
src/spotify_sdk/models/: __init__.py  playlist.py
tests/_async/: test_playlist_service.py
tests/_sync/: test_playlist_service.py
