[project]
name = "spotify-sdk"
version = "0.9.0"
description = "A Python SDK for the Spotify Web API."
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "jonathan343", email = "jonathangee09@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "sniffio>=1.3.1"
]

[build-system]
requires = ["uv_build>=0.9.21,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.14.13",
]
test = [
    "anyio[trio]>=4.12.1",
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
typecheck = [
    "pyright>=1.1.408",
]
codegen = [
  {include-group = "lint"},
  "unasync>=0.6.0",
]
docs = [
  "zensical>=0.0.19",
  "mkdocstrings-python>=1.10.0",
  "griffe-pydantic>=1.1.0",
]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "typecheck"},
  {include-group = "codegen"},
  {include-group = "docs"},
  "jmeslog>=0.2.0",
]

[tool.pyright]
pythonVersion = "3.10"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # flake8-async: Checks for problems related to asyncio
  "ASYNC",
  # flake8-logging: Checks for issues when using the logging module
  "LOG",
  # isort: Checks for un-sorted, un-formatted, and missing imports
  "I",
  # Checks for unused imports
  "F401",
  # Enable all `pydocstyle` rules, limiting to those that adhere to the
  # Google convention via `convention = "google"`, below.
  "D",
]
ignore = [
  # Checks for public __init__ method definitions that are missing docstrings.
  "D107"
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
# Ignore all docstring rules (D) in the entire tests directory
"tests/*" = ["D"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
  "integration: marks tests that hit real Spotify APIs and require credentials",
]
